codeigniter/conf/production/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: myproject-service
   namespace: myproject

spec:
   selector:
      app: myproject-deployment
   ports:
      - name: http
        port: 80
        protocol: TCP
        targetPort: 80
   sessionAffinity: ClientIP
   sessionAffinityConfig:
      clientIP:
         timeoutSeconds: 3600
   type: ClusterIP
