codeigniter/conf/production/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd,traefik-security@kubernetescrd
   name: myproject-ingress
   namespace: myproject

spec:
   rules:
      - host: "myproject.id"
        http:
           paths:
              - backend:
                   service:
                      name: myproject-service
                      port:
                         number: 80
                path: /
                pathType: Prefix
   tls:
      - hosts:
           - "myproject.id"
        secretName: myproject.id-tls
